# humanplus

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
HumanPlus.xcodeproj/: project.pbxproj
HumanPlus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HumanPlus.xcodeproj/project.xcworkspace/xcuserdata/lore.xcuserdatad/: UserInterfaceState.xcuserstate
HumanPlus.xcodeproj/xcuserdata/lore.xcuserdatad/xcschemes/: hpc.xcscheme  humanlogic.xcscheme  xcschememanagement.plist
hpc/: CMakeLists.txt
hpc-0.9/: LICENSE.TXT  main.c
hpc-0.9/include/hpc/: config.h
hpc-0.9/include/hpc/analyzers/: sources.h
hpc-0.9/include/hpc/ast/: ast.h  component.h  symbols.h  unit.h  visitor.h
hpc-0.9/include/hpc/backend/: backend.h
hpc-0.9/include/hpc/diagnostics/: diagnostics.h  output.h
hpc-0.9/include/hpc/drivers/: driver.h
hpc-0.9/include/hpc/frontend/: actions.h  instance.h  invocation.h
hpc-0.9/include/hpc/inc/: builtintypes.inc
hpc-0.9/include/hpc/ir/: builders.h  modules.h
hpc-0.9/include/hpc/linker/: input.h  linker.h
hpc-0.9/include/hpc/runtime/: runtime.h
hpc-0.9/include/hpc/utils/: files.h  numbers.h  opts.h  printers.h  strings.h
hpc-0.9/src/: hpc.cpp
hpc-0.9/src/analyzers/: sources.cpp
hpc-0.9/src/analyzers/lexer/: bufferer.cpp  control.cpp  grammar.cpp  lexer.cpp  literals.cpp  tokenizer.cpp
hpc-0.9/src/analyzers/parser/: classes.cpp  expressions.cpp  parser.cpp  statements.cpp  toplevel.cpp  types.cpp
hpc-0.9/src/analyzers/syntax/: operators.cpp
hpc-0.9/src/analyzers/validator/: classes.cpp  resolver.cpp  root.cpp  toplevel.cpp  types.cpp  validator.cpp
hpc-0.9/src/ast/: component.cpp  symbols.cpp  unit.cpp  visitor.cpp
hpc-0.9/src/ast/builder/: builder.cpp
hpc-0.9/src/ast/decls/: class.cpp  declaration.cpp  enumeration.cpp  function.cpp  namespace.cpp  protocol.cpp  (+2 more)
hpc-0.9/src/backend/: backend.cpp
hpc-0.9/src/diagnostics/: diagnostics.cpp  output.cpp
hpc-0.9/src/drivers/: driver.cpp
hpc-0.9/src/frontend/: actions.cpp  execution.cpp  instance.cpp  invocation.cpp
hpc-0.9/src/ir/: builders.cpp  classes.cpp  functions.cpp  modules.cpp  root.cpp  toplevel.cpp  types.cpp
hpc-0.9/src/linker/: input.cpp  linker.cpp
hpc-0.9/src/runtime/: runtime.cpp
hpc-0.9/src/utils/: files.cpp  numbers.cpp  opts.cpp  printers.cpp  strings.cpp
hpc/include/hpc/: config.h
hpc/include/hpc/analyzers/: sources.h
hpc/include/hpc/analyzers/lexer/: bufferer.h  lexer.h  reader.h  tokens.h
hpc/include/hpc/analyzers/parser/: parser.h
hpc/include/hpc/analyzers/syntax/: literals.h  operators.h
hpc/include/hpc/analyzers/validator/: resolver.h  validator.h
hpc/include/hpc/ast/: ast.h  component.h  symbols.h  unit.h  visitor.h
hpc/include/hpc/ast/builder/: builder.h
hpc/include/hpc/ast/decls/: class.h  declaration.h  enumeration.h  function.h  namespace.h  protocol.h  typealias.h  variable.h
hpc/include/hpc/ast/exprs/: binary.h  castings.h  constant.h  expression.h  members.h  reference.h  unary.h
hpc/include/hpc/ast/files/: table.h  writer.h
hpc/include/hpc/ast/stmt/: for.h  ifelse.h  statement.h  switchselect.h  whileuntil.h
hpc/include/hpc/ast/types/: base.h  builtintype.h  compoundtype.h  pointertype.h  type.h
hpc/include/hpc/backend/: backend.h
hpc/include/hpc/diagnostics/: diagnostics.h  output.h
hpc/include/hpc/drivers/: driver.h
hpc/include/hpc/drivers/system/: apple.h  darwin.h  linux.h  system.h  unix.h  windows.h
hpc/include/hpc/extras/dump/: dump.h
hpc/include/hpc/frontend/: actions.h  instance.h  invocation.h
hpc/include/hpc/inc/: builtintypes.inc  diags.inc  opts.inc
hpc/include/hpc/inc/ast/: declnodes.inc  stmtnodes.inc  typenodes.inc
hpc/include/hpc/inc/syntax/: escapes.inc  operators.inc
hpc/include/hpc/ir/: builders.h  modules.h
hpc/include/hpc/linker/: input.h  linker.h
hpc/include/hpc/runtime/: runtime.h
hpc/include/hpc/utils/: files.h  numbers.h  opts.h  printers.h  strings.h
hpc/src/: hpc.cpp  main.c
hpc/src/analyzers/: sources.cpp
hpc/src/analyzers/lexer/: bufferer.cpp  control.cpp  grammar.cpp  lexer.cpp  literals.cpp  reader.cpp  tokenizer.cpp  tokens.cpp
hpc/src/analyzers/parser/: classes.cpp  expressions.cpp  parser.cpp  statements.cpp  toplevel.cpp  types.cpp
hpc/src/analyzers/syntax/: operators.cpp
hpc/src/analyzers/validator/: classes.cpp  resolver.cpp  root.cpp  toplevel.cpp  types.cpp  validator.cpp
hpc/src/analyzers/validator/exprs/: binary.cpp  castings.cpp  resolution.cpp  unary.cpp
hpc/src/analyzers/validator/stmt/: iteration.cpp  selection.cpp  statements.cpp  variables.cpp
hpc/src/ast/: component.cpp  symbols.cpp  unit.cpp  visitor.cpp
hpc/src/ast/builder/: builder.cpp
hpc/src/ast/decls/: class.cpp  declaration.cpp  enumeration.cpp  function.cpp  namespace.cpp  protocol.cpp  typealias.cpp  variable.cpp
hpc/src/ast/exprs/: binary.cpp  castings.cpp  constant.cpp  expression.cpp  members.cpp  reference.cpp  unary.cpp
hpc/src/ast/files/: table.cpp  writer.cpp
hpc/src/ast/stmt/: for.cpp  ifelse.cpp  statement.cpp  switchselect.cpp  whileuntil.cpp
hpc/src/ast/types/: base.cpp  builtintype.cpp  compoundtype.cpp  pointertype.cpp
hpc/src/backend/: backend.cpp
hpc/src/diagnostics/: diagnostics.cpp  output.cpp
hpc/src/drivers/: driver.cpp
hpc/src/drivers/system/: apple.cpp  darwin.cpp  linux.cpp  system.cpp  unix.cpp  windows.cpp
hpc/src/extras/dump/: castings.cpp  dump.cpp  expressions.cpp  statements.cpp  toplevel.cpp  types.cpp
hpc/src/frontend/: actions.cpp  execution.cpp  instance.cpp  invocation.cpp
hpc/src/ir/: builders.cpp  classes.cpp  functions.cpp  modules.cpp  root.cpp  toplevel.cpp  types.cpp
hpc/src/ir/exprs/: binary.cpp  castings.cpp  literals.cpp  references.cpp  unary.cpp
hpc/src/ir/stmt/: iteration.cpp  selection.cpp  statements.cpp
hpc/src/linker/: input.cpp  linker.cpp
hpc/src/runtime/: runtime.cpp
hpc/src/utils/: files.cpp  numbers.cpp  opts.cpp  printers.cpp  strings.cpp
humanlogic/: CMakeLists.txt
humanlogic-0.9/src/: entry.c  io.c
humanlogic/src/: entry.c  io.c
tests/: fact.hmn  points.hmn
(+87 files in other folders)
